--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 		<ul>
 			<li><a target="_top" href="https://www.aoindustries.com/ao-credit-cards/stripe/">Project Home</a></li>
 			<li><a target="_top" href="https://www.aoindustries.com/ao-credit-cards/stripe/apidocs/">API Docs</a></li>
-			<li><a target="_top" href="http://search.maven.org/#search|gav|1|g:%22com.aoindustries%22%20AND%20a:%22ao-credit-cards-stripe%22">Maven Central Repository</a></li>
+			<li><a target="_top" href="https://search.maven.org/#search|gav|1|g:%22com.aoindustries%22%20AND%20a:%22ao-credit-cards-stripe%22">Maven Central Repository</a></li>
 			<li><a target="_top" href="https://github.com/aoindustries/ao-credit-cards-stripe">GitHub</a></li>
 		</ul>
 	</div>
