--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 	</properties>
 
 	<name>AO Credit Cards Stripe</name>
-	<url>${project.parent.url}stripe/</url>
+	<url>https://www.aoindustries.com${bookPath}/</url><!-- Can't inherit due to multi-module -->
 	<description>Provider for Stripe.</description>
 	<inceptionYear>2015</inceptionYear>
 
