--- a/pom.xml
+++ b/pom.xml
@@ -36,13 +36,12 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 	<packaging>jar</packaging>
 
 	<properties>
-		<bookPath>/${project.parent.artifactId}/stripe</bookPath>
 		<shortTitle>Stripe</shortTitle>
 		<description.html><![CDATA[Provider for <a target="_top" href="https://stripe.com/">Stripe</a>.]]></description.html>
 	</properties>
 
 	<name>AO Credit Cards Stripe</name>
-	<url>https://aoindustries.com${bookPath}/</url><!-- Can't inherit due to multi-module -->
+	<url>https://aoindustries.com/${project.parent.artifactId}/stripe/</url>
 	<description>Provider for Stripe.</description>
 	<inceptionYear>2015</inceptionYear>
 
