--- a/book/pom.xml
+++ b/book/pom.xml
@@ -40,6 +40,8 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 		<!-- These values are copied from the project being documented -->
 		<documented.groupId>com.aoindustries</documented.groupId>
 		<documented.artifactId>ao-credit-cards-stripe</documented.artifactId>
+		<documented.javaVersion>1.6</documented.javaVersion>
+		<documented.javac.link.javaApi>${javac.link.javaApi.jdk16}</documented.javac.link.javaApi>
 		<documented.name>AO Credit Cards Stripe</documented.name>
 		<documented.shortTitle>Stripe</documented.shortTitle>
 		<documented.url>https://aoindustries.com/ao-credit-cards/stripe/</documented.url>
@@ -100,6 +102,11 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 					<artifactId>jstl-api</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>com.aoindustries</groupId>
+			<artifactId>ao-badges</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.aoindustries</groupId>
