--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 		<relativePath>../../ao-oss-parent/pom.xml</relativePath>
 	</parent>
 
-	<groupId>com.aoindustries</groupId><artifactId>ao-credit-cards-stripe</artifactId><version>1.0.3-validation-SNAPSHOT</version>
+	<groupId>com.aoindustries</groupId><artifactId>ao-credit-cards-stripe</artifactId><version>1.1.0-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 
 	<properties>
@@ -77,7 +77,7 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 			<groupId>com.stripe</groupId><artifactId>stripe-java</artifactId><version>2.10.2</version>
 		</dependency>
 		<dependency>
-			<groupId>com.aoindustries</groupId><artifactId>ao-credit-cards-api</artifactId><version>1.0.3-validation-SNAPSHOT</version>
+			<groupId>com.aoindustries</groupId><artifactId>ao-credit-cards-api</artifactId><version>1.1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.aoindustries</groupId><artifactId>ao-lang</artifactId><version>2.0.0-validation-SNAPSHOT</version>
