--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 
 	<dependencies>
 		<dependency>
+			<!-- TODO: Update stripe JAR and make associated changes before next production release -->
 			<groupId>com.stripe</groupId><artifactId>stripe-java</artifactId><version>2.10.2</version>
 		</dependency>
 		<dependency>
