--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,7 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 								<link>${javac.link.javaApi}</link>
 								<link>https://aoindustries.com/ao-credit-cards/api/apidocs/</link>
 								<link>https://aoindustries.com/ao-lang/apidocs/</link>
+								<link>https://aoindustries.com/aocode-public/apidocs/</link>
 							</links>
 						</configuration>
 					</plugin>
@@ -74,14 +75,16 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 
 	<dependencies>
 		<dependency>
-			<!-- TODO: Update stripe JAR and make associated changes before next production release -->
-			<groupId>com.stripe</groupId><artifactId>stripe-java</artifactId><version>2.10.2</version>
+			<groupId>com.stripe</groupId><artifactId>stripe-java</artifactId><version>9.7.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.aoindustries</groupId><artifactId>ao-credit-cards-api</artifactId><version>1.1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.aoindustries</groupId><artifactId>ao-lang</artifactId><version>2.0.0-validation-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.aoindustries</groupId><artifactId>aocode-public</artifactId><version>2.0.0-validation-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
