--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,24 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 			</dependency>
 			<!-- Transitive -->
 			<dependency>
+				<groupId>com.aoindustries</groupId><artifactId>ao-tempfiles</artifactId><version>1.0.1${POST-SNAPSHOT}</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-beanutils</groupId><artifactId>commons-beanutils</artifactId><version>1.9.4</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-collections</groupId><artifactId>commons-collections</artifactId><version>3.2.2</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-digester</groupId><artifactId>commons-digester</artifactId><version>2.1</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-logging</groupId><artifactId>commons-logging</artifactId><version>1.2</version>
+			</dependency>
+			<dependency>
+				<groupId>commons-validator</groupId><artifactId>commons-validator</artifactId><version>1.6</version>
+			</dependency>
+			<dependency>
 				<groupId>com.google.code.gson</groupId><artifactId>gson</artifactId><version>2.8.6</version>
 			</dependency>
 		</dependencies>
