--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,8 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 / <a target="_top" href="${project.url}">${shortTitle}</a>]]></javadoc.breadcrumbs>
 		<shortTitle>Stripe</shortTitle>
 		<description.html><![CDATA[Provider for <a target="_top" href="https://stripe.com/">Stripe</a>.]]></description.html>
+		<!-- Dependencies -->
+		<org.apache.commons:commons-lang3:version>3.9</org.apache.commons:commons-lang3:version>
 	</properties>
 
 	<name>AO Credit Cards Stripe</name>
@@ -66,6 +68,7 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 								<link>https://aoindustries.com/ao-credit-cards/api/apidocs/</link>
 								<link>https://aoindustries.com/ao-lang/apidocs/</link>
 								<link>https://aoindustries.com/aocode-public/apidocs/</link>
+								<link>https://commons.apache.org/proper/commons-lang/javadocs/api-${org.apache.commons:commons-lang3:version}/</link>
 								<!-- No apidocs: <groupId>com.stripe</groupId><artifactId>stripe-java</artifactId> -->
 							</links>
 						</configuration>
@@ -86,6 +89,9 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 			</dependency>
 			<dependency>
 				<groupId>com.aoindustries</groupId><artifactId>aocode-public</artifactId><version>4.0.0-SNAPSHOT<!-- ${POST-SNAPSHOT} --></version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId><artifactId>commons-lang3</artifactId><version>${org.apache.commons:commons-lang3:version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.stripe</groupId><artifactId>stripe-java</artifactId><version>18.7.0</version>
@@ -125,6 +131,9 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 		</dependency>
 		<dependency>
 			<groupId>com.aoindustries</groupId><artifactId>aocode-public</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId><artifactId>commons-lang3</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.stripe</groupId><artifactId>stripe-java</artifactId>
