--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,7 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 			<dependency>
 				<groupId>commons-validator</groupId><artifactId>commons-validator</artifactId><version>1.6</version>
 			</dependency>
-			<!-- Runtime -->
+			<!-- Runtime Transitive -->
 			<dependency>
 				<groupId>com.google.code.gson</groupId><artifactId>gson</artifactId><version>2.8.6</version>
 			</dependency>
