--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 		<description.html><![CDATA[Provider for <a target="_top" href="https://stripe.com/">Stripe</a>.]]></description.html>
 		<!-- Dependencies -->
 		<org.apache.commons.commons-lang3.version>3.10</org.apache.commons.commons-lang3.version>
+		<com.google.code.gson.gson.version>2.8.6</com.google.code.gson.gson.version>
 	</properties>
 
 	<name>AO Credit Cards Stripe</name>
@@ -124,7 +125,7 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 			</dependency>
 			<!-- Runtime Transitive -->
 			<dependency>
-				<groupId>com.google.code.gson</groupId><artifactId>gson</artifactId><version>2.8.6</version>
+				<groupId>com.google.code.gson</groupId><artifactId>gson</artifactId><version>${com.google.code.gson.gson.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
