--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 		<!-- Dependencies -->
 		<org.apache.commons.commons-lang3.version>3.10</org.apache.commons.commons-lang3.version>
 		<com.google.code.gson.gson.version>2.8.6</com.google.code.gson.gson.version>
+		<com.stripe.stripe-java.version>19.5.0</com.stripe.stripe-java.version>
 	</properties>
 
 	<name>AO Credit Cards Stripe</name>
@@ -74,7 +75,7 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 								<link>https://aoindustries.com/ao-lang/apidocs/</link>
 								<link>https://aoindustries.com/aocode-public/apidocs/</link>
 								<link>https://commons.apache.org/proper/commons-lang/javadocs/api-${org.apache.commons.commons-lang3.version}/</link>
-								<!-- No apidocs: <groupId>com.stripe</groupId><artifactId>stripe-java</artifactId> -->
+								<link>https://javadoc.io/doc/com.stripe/stripe-java/${com.stripe.stripe-java.version}/</link>
 							</links>
 						</configuration>
 					</plugin>
@@ -99,7 +100,7 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 				<groupId>org.apache.commons</groupId><artifactId>commons-lang3</artifactId><version>${org.apache.commons.commons-lang3.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>com.stripe</groupId><artifactId>stripe-java</artifactId><version>18.12.0</version>
+				<groupId>com.stripe</groupId><artifactId>stripe-java</artifactId><version>${com.stripe.stripe-java.version}</version>
 			</dependency>
 			<!-- Transitive -->
 			<dependency>
