--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,19 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 		<url>https://github.com/aoindustries/ao-credit-cards-stripe/issues</url>
 	</issueManagement>
 
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId><artifactId>versions-maven-plugin</artifactId><version>2.7</version>
+					<configuration>
+						<rulesUri>file://${project.basedir}/versions-rules.xml</rulesUri>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
+
 	<profiles>
 		<profile>
 			<id>release</id>
