Thoroughly reviewed and sorted dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -119,10 +119,6 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 						<groupId>org.apache.maven.plugins</groupId><artifactId>maven-javadoc-plugin</artifactId>
 						<configuration>
 							<offlineLinks>
-								<offlineLink>
-									<url>${javadoc.link.javase}</url>
-									<location>${project.build.directory}/offlineLinks/com/aoindustries/javadoc/offline/javase/${javase.release}</location>
-								</offlineLink>
 								<!-- Direct -->
 								<offlineLink>
 									<url>https://aoindustries.com/ao-credit-cards/api/apidocs/</url>
@@ -143,6 +139,11 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 								<offlineLink>
 									<url>https://javadoc.io/doc/com.stripe/stripe-java/${stripe-java.version}/</url>
 									<location>${project.build.directory}/offlineLinks/com.stripe/stripe-java</location>
+								</offlineLink>
+								<!-- Java SE -->
+								<offlineLink>
+									<url>${javadoc.link.javase}</url>
+									<location>${project.build.directory}/offlineLinks/com/aoindustries/javadoc/offline/javase/${javase.release}</location>
 								</offlineLink>
 							</offlineLinks>
 						</configuration>
