--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>com.aoindustries</groupId><artifactId>ao-oss-parent</artifactId><version>1.10.0-POST-SNAPSHOT</version>
+		<groupId>com.aoindustries</groupId><artifactId>ao-oss-parent</artifactId><version>1.11.0-SNAPSHOT</version>
 		<relativePath>../../ao-oss-parent/pom.xml</relativePath>
 	</parent>
 
@@ -39,7 +39,6 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 		<description.html><![CDATA[Provider for <a target="${javadoc.target}" href="https://stripe.com/">Stripe</a>.]]></description.html>
 		<!-- Dependencies -->
 		<commons-lang3.version>3.11</commons-lang3.version>
-		<gson.version>2.8.6</gson.version>
 		<stripe-java.version>19.37.0</stripe-java.version>
 	</properties>
 
@@ -59,18 +58,6 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 		<system>GitHub Issues</system>
 		<url>https://github.com/aoindustries/ao-credit-cards-stripe/issues</url>
 	</issueManagement>
-
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId><artifactId>versions-maven-plugin</artifactId>
-				<inherited>false</inherited>
-				<configuration>
-					<rulesUri>file://${project.basedir}/versions-rules.xml</rulesUri>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 
 	<profiles>
 		<profile>
@@ -195,7 +182,7 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 			</dependency>
 			<!-- Runtime Transitive -->
 			<dependency>
-				<groupId>com.google.code.gson</groupId><artifactId>gson</artifactId><version>${gson.version}</version>
+				<groupId>com.google.code.gson</groupId><artifactId>gson</artifactId><version>2.8.6</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
