--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 		<relativePath>../../ao-oss-parent/pom.xml</relativePath>
 	</parent>
 
-	<groupId>com.aoindustries</groupId><artifactId>ao-credit-cards-stripe</artifactId><version>1.1.2-POST-SNAPSHOT</version>
+	<groupId>com.aoindustries</groupId><artifactId>ao-credit-cards-stripe</artifactId><version>1.2.0-SNAPSHOT</version>
 	<packaging>bundle</packaging>
 
 	<properties>
@@ -39,7 +39,7 @@ along with ao-credit-cards-stripe.  If not, see <http://www.gnu.org/licenses />.
 		<description.html><![CDATA[Provider for <a target="${javadoc.target}" href="https://stripe.com/">Stripe</a>.]]></description.html>
 		<!-- Dependencies -->
 		<commons-lang3.version>3.11</commons-lang3.version>
-		<stripe-java.version>19.45.0</stripe-java.version>
+		<stripe-java.version>20.1.0</stripe-java.version>
 	</properties>
 
 	<name>AO Credit Cards Stripe</name>
