Use version properties generated by dependencyversion-maven-plugin
instead of directly defined properties.  We're using this pattern on all
projects for consistency.  This pattern is important for when the specific
version is obtained from a BOM and not directly declared by the project
itself.

--- a/pom.xml
+++ b/pom.xml
@@ -43,9 +43,6 @@ along with ao-payments-stripe.  If not, see <https://www.gnu.org/licenses/>.
     <description.html><![CDATA[Provider for <a target="${javadoc.target}" href="https://stripe.com/">Stripe</a>.]]></description.html>
     <!-- TODO: Implement tests -->
     <sonar.coverage.exclusions>**.*</sonar.coverage.exclusions>
-    <!-- Dependencies -->
-    <commons-lang3.version>3.13.0</commons-lang3.version>
-    <stripe-java.version>23.6.0</stripe-java.version>
   </properties>
 
   <name>AO Payments Stripe</name>
@@ -187,11 +184,11 @@ along with ao-payments-stripe.  If not, see <https://www.gnu.org/licenses/>.
                   <location>${project.build.directory}/offlineLinks/com.aoapps/ao-payments-api</location>
                 </offlineLink>
                 <offlineLink>
-                  <url>https://javadoc.io/doc/org.apache.commons/commons-lang3/${commons-lang3.version}/</url>
+                  <url>https://javadoc.io/doc/org.apache.commons/commons-lang3/${org.apache.commons:commons-lang3:jar.version}/</url>
                   <location>${project.build.directory}/offlineLinks/org.apache.commons/commons-lang3</location>
                 </offlineLink>
                 <offlineLink>
-                  <url>https://javadoc.io/doc/com.stripe/stripe-java/${stripe-java.version}/</url>
+                  <url>https://javadoc.io/doc/com.stripe/stripe-java/${com.stripe:stripe-java:jar.version}/</url>
                   <location>${project.build.directory}/offlineLinks/com.stripe/stripe-java</location>
                 </offlineLink>
               </offlineLinks>
@@ -262,10 +259,10 @@ along with ao-payments-stripe.  If not, see <https://www.gnu.org/licenses/>.
         <groupId>com.aoapps</groupId><artifactId>ao-payments-api</artifactId><version>3.0.0${POST-SNAPSHOT}</version>
       </dependency>
       <dependency>
-        <groupId>org.apache.commons</groupId><artifactId>commons-lang3</artifactId><version>${commons-lang3.version}</version>
+        <groupId>org.apache.commons</groupId><artifactId>commons-lang3</artifactId><version>3.13.0</version>
       </dependency>
       <dependency>
-        <groupId>com.stripe</groupId><artifactId>stripe-java</artifactId><version>${stripe-java.version}</version>
+        <groupId>com.stripe</groupId><artifactId>stripe-java</artifactId><version>23.6.0</version>
       </dependency>
       <!-- Transitive -->
       <dependency>
